# psu-lib-ia

./: AIModelInterface.py  BasicAIModel.py  DataCLFReader.py  DataCleaner.py  DataIPTransformer.py  DataTransformer.py  README.md  cache.json  detail.py  errors.txt  main.py  pyproject.toml  settings.py
temp_dir/: file_10000.parquet  file_999.parquet
