[project]
name = "psu-lib-ia"
version = "0.1.0"
description = "psu-lib-ia"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
